; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_cs-etm.c_cs_etm__t32_instr_size.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_cs-etm.c_cs_etm__t32_instr_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_etm_queue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cs_etm_queue*, i32, i32)* @cs_etm__t32_instr_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cs_etm__t32_instr_size(%struct.cs_etm_queue* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.cs_etm_queue*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [2 x i32], align 4
  store %struct.cs_etm_queue* %0, %struct.cs_etm_queue** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.cs_etm_queue*, %struct.cs_etm_queue** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 0
  %12 = call i32 @ARRAY_SIZE(i32* %11)
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 0
  %14 = call i32 @cs_etm__mem_access(%struct.cs_etm_queue* %8, i32 %9, i32 %10, i32 %12, i32* %13)
  %15 = getelementptr inbounds [2 x i32], [2 x i32]* %7, i64 0, i64 1
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 248
  %18 = icmp sge i32 %17, 232
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 4, i32 2
  ret i32 %20
}

declare dso_local i32 @cs_etm__mem_access(%struct.cs_etm_queue*, i32, i32, i32, i32*) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
